--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,5 @@
-== README
+== Tory's Blog
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
+This is Tory's Blog
 
-Things you may want to cover:
-
-* Ruby version
-
-* System dependencies
-
-* Configuration
-
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
-
-
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
+I am currently running through the ruby tutorial, see [here](http://guides.rubyonrails.org/getting_started.html)
